--- a/home_style.css
+++ b/home_style.css
@@ -62,7 +62,9 @@ p{
     height: 35px; 
     border-radius: 2px; 
 }
-
+textarea {
+    resize: vertical;
+}
 @media(max-width: 930px) {
     .article{
         margin-top: -50px;
